# coursera

./: .gitignore
c++/: .gitignore  .project  CMakeLists.txt
c++/1_white_belt/: CMakeLists.txt
c++/1_white_belt/1_week/: CMakeLists.txt  second_entry.cpp
c++/1_white_belt/2_week/: CMakeLists.txt  busses_stops_1.cpp  capital_handbook.cpp  factorial.cpp  reverse_2.cpp  string_moving.cpp  synonyms.cpp  uniq_strings.cpp
c++/1_white_belt/3_week/: CMakeLists.txt  constructor.cpp  names&surnames_1.cpp  names&surnames_2.cpp
c++/1_white_belt/4_week/: CMakeLists.txt  files_p2.cpp  tables_io.cpp
c++/1_white_belt/5_week/: CMakeLists.txt  project_template.cpp
c++/2_yellow_belt/: CMakeLists.txt  unittest.cpp
c++/2_yellow_belt/1_week/: CMakeLists.txt  matrix_sum.cpp  sqr.cpp  task_tracker_my.cpp  task_tracker_notmy.cpp
c++/2_yellow_belt/2_week/: starter.cpp  test_equation.cpp  test_person.cpp  test_rational.cpp
c++/2_yellow_belt/3_week/: bus_manager.cpp  bus_manager.h  phone_number.h  query.h  rectangle.cpp  rectangle.h  responses.cpp  sum_reverse_sort.h
c++/2_yellow_belt/4_week/: find_greater_elements.cpp  prefix_concat.cpp  print_vector_part.cpp  remove_duplicates.cpp
c++/2_yellow_belt/5_week/: figure_set.cpp  refactor.cpp
c++/2_yellow_belt/6_week/: condition_parser_test.cpp  database.cpp  main.cpp  node.cpp  node.h
c++/2_yellow_belt/headers/: test_runner.h
c++/3_red_belt/: CMakeLists.txt
c++/3_red_belt/1_week/: log.cpp  own_deque.cpp  print_values.cpp
c++/3_red_belt/2_week/: learner.cpp  slow.cpp  sort_students.cpp
c++/3_red_belt/3_week/: book_my.cpp  book_nmy.cpp  fast.cpp  linked_list.cpp  simple_vector.h  slow.cpp  swap_sort_copy.cpp  test.cpp
c++/3_red_belt/4_week/: .airport_counter.cpp.swp  CMakeLists.txt  airport_counter.cpp  translator_ex.cpp
c++/3_red_belt/5_week/: CMakeLists.txt
c++/3_red_belt/6_week/: CMakeLists.txt  iterator_range.h  main.cpp  parse.cpp  parse.h  search_server.cpp  search_server.h
c++/3_red_belt/headers/: CMakeLists.txt  test_runner.h
c++/4_brown_belt/: CMakeLists.txt
c++/4_brown_belt/1_week/: CMakeLists.txt
c++/4_brown_belt/2_week/: CMakeLists.txt
c++/4_brown_belt/headers/: profile.h  test_runner.h
c++/headers/: profile.h  test_runner.h
c++/red_belt/: .cproject  .project  Makefile  red_belt.cpp
c++/red_belt/hdrs/: test_runner.h
c++/red_belt/w1/: max_element_if.cpp  paginator.cpp  sort_by.cpp  table.cpp  test_runner.h  uniq_id.cpp  update_field.cpp
c++/red_belt/w2/: el_book.cpp
c++/red_belt/w3/: a.out  kek.txt  linked_list.cpp  object_pool.cpp  simple_vector.h  test.cpp
c++/red_belt/w4/: a.out  airport_counter.cpp  profile.h  stack_vector.h  translator.cpp
c++/white_belt/w1/: bin_numbers.cpp  equation.cpp  gcd.cpp
c++/white_belt/w2/: anagramms.cpp  avg_temp.cpp  busses_stops_2.cpp  busses_stops_3.cpp  dict_vals.cpp  evermonth_businesses.cpp  factorial.cpp  maximizer.cpp  palindrome.cpp  palindrome_selection.cpp  queue.cpp  reverse_1.cpp
c++/white_belt/w3/: module_sort.cpp  names&surnames_1.cpp  names&surnames_3.cpp  sotrted_string.cpp  unreg_sort.cpp  variants_of_init.cpp
c++/white_belt/w4/: EnsureEqual.cpp  files_p1.cpp  invertable_func.cpp  invertable_func_with_add_and_mult.cpp  lecture_title.cpp  precision_output.cpp  rational.cpp  rational_with_exceptions.cpp  students_list.cpp  time_server.cpp
c++/white_belt/w5/: project_template.cpp
c++/yellow_belt/: unittest.cpp
c++/yellow_belt/w1/: avg_temp.cpp  blocks_sum.cpp  link_to_the_element.cpp  task_tracker_notmy.cpp
c++/yellow_belt/w2/: correct.cpp  test_equation.cpp  test_palindrome.cpp  test_person.cpp
c++/yellow_belt/w3/: main.cpp  phone_number.cpp  phone_number.h  query.cpp  rectangle.h  responses.h  sum_reverse_sort.cpp
c++/yellow_belt/w4/: build_arithmetic_equation.cpp  demographical_nums.cpp  merge_sort.cpp  prefix_concat.cpp  prev_perm.cpp  split_into_words.cpp
c++/yellow_belt/w5/: notifier.cpp  own_inheritance.cpp  refactor.cpp
c++/yellow_belt/w6/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h
(+379 files in other folders)
