add_subdirectory(anagrams)
add_subdirectory(avg_temp)
add_subdirectory(bus_stops_1)
add_subdirectory(bus_stops_2)
add_subdirectory(bus_stops_3)
add_subdirectory(capital_handbook)
add_subdirectory(dict_values)
add_subdirectory(factorial)
add_subdirectory(maximizer)
add_subdirectory(palindrome)
add_subdirectory(palindrome_selection)
add_subdirectory(per_month_businesses)
add_subdirectory(queue)
add_subdirectory(reverse_1)
add_subdirectory(reverse_2)
add_subdirectory(string_moving)
add_subdirectory(synonyms)
add_subdirectory(unique_strings)