set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WEEK_PREFIX}/${1_week}")

add_subdirectory(hash_table)
add_subdirectory(priority_collection)
add_subdirectory(set_iterator_next)
add_subdirectory(integrate_point_into_unordered_set)
add_subdirectory(integrate_person_into_unordered_set)
add_subdirectory(secondary_index)